# osg-skyportal-plugin

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  config.yaml.defaults  fiesta_bridge.py  fiesta_wrapper.py  main.py  nmma_wrapper.py  osdf.py  pyproject.toml  redback_bridge.py  register_analysis_service.py
.github/workflows/: test.yaml
containers/: Dockerfile  README.md  fiesta-gpu.def  fiesta.def
examples/: dry_run_inputs.json
tests/: conftest.py  test_fiesta_wrapper.py  test_main.py  test_nmma_wrapper.py  test_osdf.py
